# comic-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONCEPTS.md  CONTRIBUTING.md  README.md  SECURITY.md  cli.py  ebay_bidder.py  gixen_client.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: comic-grader.md  comic-identifier.md
.claude/commands/: em-batch.md
.claude/commands/comic/: buy.md  calibration-report.md  collection-add.md  collection-check.md  collection-sync.md  ezship-add.md  fmv.md  grade.md  identify.md  seller-scan.md  snipe-add.md  snipe-show.md  verify.md  wishlist-add.md  wishlist-sellers.md
.claude/skills/: buy.md  collection-add.md  collection-check.md  fmv.md  grade.md  seller-scan.md  snipe-add.md  verify.md
.conductor/: settings.toml
.github/workflows/: ci.yml  comic-lint.yml  publish.yml  tests.yml
apps/ebay/: hatch_build.py  pyproject.toml
apps/ebay/src/: comic_identify.py  comic_identity.py  comic_identity_year.py  ebay_fetch.py  ebay_search_cache.py  grade_photos.py  seller_aliases.json  seller_scan.py  sold_comps.py  wishlist_sellers.py
apps/ebay/tests/: conftest.py  test_comic_identify.py  test_comic_identity.py  test_ebay_fetch.py  test_ebay_search_cache.py  test_grade_photos.py  test_seller_scan.py  test_sold_comps.py  test_version_flag.py  test_wishlist_sellers.py
apps/ezship/: package-lock.json  package.json  tsconfig.json
apps/ezship/src/: api.ts  auth.ts  cli.ts  order-ledger.ts  types.ts
apps/ezship/test/: api.test.ts  auth.test.ts  order-ledger.test.ts  types.test.ts
apps/fmv/: hatch_build.py  pyproject.toml
apps/fmv/scripts/: fmv_high_calibration.py
apps/fmv/src/: fmv_cli.py  fmv_math.py  fmv_runner.py
apps/fmv/tests/: test_first_party_comps.py  test_fmv_cli.py  test_fmv_math.py  test_fmv_runner.py  test_golden_fmv_math.py  test_recency_baseline.py
apps/fmv/tests/fixtures/: fmv_math_golden.json  recency_baseline.json
data/locg/: collection.json  ids.json  wish-list.json
docs/: 2026-05-13-comic-fmv-split.md
docs/audit/: 2026-06-15-remediation-runbook.md  2026-06-15-seam-audit.md
docs/brainstorms/: 2026-05-19-comics-dashboard-requirements.md  2026-05-24-seller-scan-requirements.md  2026-06-03-bui-78-seller-photo-grades-requirements.md  2026-06-03-bui-87-collection-server-api-requirements.md  2026-06-03-comic-grader-accuracy-efficiency-requirements.md  2026-06-03-fmv-thin-comp-pool-requirements.md
docs/conventions/: comics-server-call.md  fmv-math-spec.md  metron-api-best-practices.md  wishlist-add-creator-run.md
docs/decisions/: 0001-pivot-locg-cli-to-local-first.md
docs/plans/: 2026-05-18-004-refactor-extract-comic-overlay-plugin-plan.md  2026-05-19-001-feat-fmv-schema-split-plan.md  2026-05-19-002-feat-comics-dashboard-plan.md  2026-05-19-002-feat-migrate-ezship-cli-to-comic-pipeline-plan.md  2026-05-19-005-feat-per-35-standalone-verification-plan.md  2026-05-21-001-refactor-drop-comics-year-not-null-plan.md  2026-05-24-001-feat-seller-scan-plan.md  2026-05-24-001-feat-wish-list-cache-plan.md  2026-05-24-002-per-132-matcher-false-positives.md  2026-06-01-001-refactor-merge-monorepo-plan.md  2026-06-01-002-refactor-rename-purged-to-removed-plan.md  2026-06-01-003-fix-duplicate-active-snipes-plan.md  2026-06-01-003-fix-seller-scan-finding-api-verify-plan.md  2026-06-03-001-feat-comic-grader-accuracy-efficiency-plan.md  2026-06-03-002-feat-seller-photo-grades-plan.md  2026-06-03-003-refactor-locg-cache-in-repo-plan.md  2026-06-03-004-feat-fmv-thin-comp-pool-plan.md  2026-06-05-001-feat-collection-server-api-plan.md  2026-06-10-001-fix-reliable-bid-edits-plan.md  2026-06-10-002-feat-cache-dbidid-edit-fastpath-plan.md  2026-06-13-001-feat-safe-locg-collection-sync-plan.md  2026-06-16-002-spike-metron-canonical-series-name-source.md  2026-06-16-code-review-remediation.md  2026-06-21-001-design-unified-locg-sync-plan.md  2026-06-26-001-feat-multi-seller-wishlist-scan-plan.md  2026-07-04-001-feat-fmv-auction-outcome-feedback-plan.md  2026-07-05-001-refactor-collection-add-simplification-plan.md  2026-07-18-001-design-shared-connection-isolation-plan.md
docs/reference/: date-backfill-worked-example.md  wishlist-sellers-scheduling.md
docs/runbooks/: comics-server-dir-migration.md
docs/solutions/: fmv-bid-linkage-gap-2026-05-23.md
docs/solutions/architecture-patterns/: add-a-safety-gate-as-a-fail-closed-precheck-not-by-relocating-an-invariant.md  durable-evidence-store-encode-unknowns-and-identity-precisely.md  evidence-layer-disambiguation-vs-heuristic-gating.md  (+2 more)
gixen/: plugins.py
plugins/gixen-overlay/: pyproject.toml
plugins/gixen-overlay/src/gixen_overlay/: db.py  locg_lookup.py  models.py  plugin.py  routes.py  title_parser.py
plugins/gixen-overlay/src/gixen_overlay/static/: v2-comics.html
plugins/gixen-overlay/tests/: test_ci_runs_suites.py  test_collection_api.py  test_collection_backup_restore_api.py  test_collection_delete_api.py  test_collection_remediate_api.py  test_collection_sync_doc.py  test_comics_server_convention.py  test_gixen_overlay_db.py  test_gixen_overlay_routes.py  test_grade_doc.py  test_locg_lookup.py  test_skill_contracts.py  test_title_parser.py  test_workspace_imports.py  test_year_nullable.py
scripts/: comics-api  comics-server.sh  install.sh  metron-curl.sh
server/: db.py  install.sh  main.py  title_parser.py
server/static/: index.html  v1-crt.html  v2-bids.html  v2-comics.html  v2-tui.html  v3-amber.html
skills/: buy.md  collection-add.md  ezship-add.md  grade.md  identify.md  snipe-add.md  snipe-show.md
src/locg/: __init__.py  cli.py  client.py  collection_cache.py  collection_io.py  commands.py  config.py  metron.py
tests/: conftest.py  test_cli.py  test_client.py  test_collection_cache.py  test_collection_commands.py  test_collection_io.py  test_commands.py  test_gixen_client.py  test_metron.py  test_server_api.py  test_server_db.py  test_skill_migration.py  test_standalone_server.py  test_title_parser.py
tests/fixtures/: collection_export_sample.xlsx
(+45 files in other folders)
