[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "gixen-cli"
version = "1.0.0"
description = "CLI and server for managing eBay snipes via Gixen"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hsu Ken Ooi", email = "hsukenooi@googlemail.com" }]
keywords = ["ebay", "sniper", "gixen", "cli", "auctions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "requests",
    "click",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pluggy",
]

[project.urls]
Homepage = "https://github.com/hsukenooi/gixen-cli"
Repository = "https://github.com/hsukenooi/gixen-cli"
Issues = "https://github.com/hsukenooi/gixen-cli/issues"
Changelog = "https://github.com/hsukenooi/gixen-cli/blob/main/CHANGELOG.md"

[project.scripts]
gixen = "cli:cli"

[project.entry-points."gixen.plugins"]
# External plugin packages declare their entry-points here.
# Example (in the plugin's own pyproject.toml):
#   [project.entry-points."gixen.plugins"]
#   my-plugin = "my_plugin:GixenPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["gixen*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real Gixen credentials (deselect with -m 'not integration')",
]
