[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-tools"
version = "0.2.0"
description = "eBay data tools: live listings (Browse API) and sold comps (SerpApi)"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "requests",
]

[project.scripts]
ebay-fetch = "ebay_fetch:main"
ebay-sold-comps = "sold_comps:main"
seller-scan = "seller_scan:main"

[tool.hatch.build.targets.wheel]
include = [
    "src/ebay_fetch.py",
    "src/sold_comps.py",
    "src/seller_scan.py",
    "src/seller_aliases.json",
]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# BUI-185: bare/blind-except rules only.
select = ["E722", "BLE001", "B904"]
