[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-tools"
version = "0.2.0"
description = "eBay data tools: live listings (Browse API) and sold comps (SerpApi)"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
ebay-fetch = "ebay_fetch:main"
ebay-sold-comps = "sold_comps:main"
seller-scan = "seller_scan:main"
wishlist-sellers = "wishlist_sellers:main"
comic-identify = "comic_identify:main"
grade-photos = "grade_photos:main"

[tool.hatch.build.targets.wheel]
include = [
    "src/ebay_fetch.py",
    "src/sold_comps.py",
    "src/comic_identity.py",
    "src/comic_identity_year.py",
    "src/comic_identify.py",
    "src/grade_photos.py",
    "src/seller_scan.py",
    "src/ebay_search_cache.py",
    "src/wishlist_sellers.py",
    "src/seller_aliases.json",
]
sources = ["src"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# BUI-185: bare/blind-except rules only.
select = ["E722", "BLE001", "B904"]
