[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-tools"
version = "0.2.0"
description = "eBay data tools: live listings (Browse API) and sold comps (SerpApi)"
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
ebay-fetch = "ebay_fetch:main"
ebay-sold-comps = "sold_comps:main"
seller-scan = "seller_scan:main"
wishlist-sellers = "wishlist_sellers:main"
comic-identify = "comic_identify:main"
grade-photos = "grade_photos:main"

[tool.hatch.build.targets.wheel]
# BUI-332: glob-based include so every src/*.py is shipped automatically —
# no per-file entry to forget on a new module (the old explicit list let a
# missing entry pass `uv run pytest`, which uses pythonpath=["src"] and never
# exercises this list, and only break at `uv tool install` runtime).
include = [
    "src/*.py",
    "src/seller_aliases.json",
]
sources = ["src"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# BUI-185: bare/blind-except rules only.
select = ["E722", "BLE001", "B904"]
