[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comic-fmv"
version = "0.1.0"
description = "Compute fair market value for comics from eBay sold comps"
requires-python = ">=3.11"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
comic-fmv = "fmv_cli:main"

[tool.hatch.build.targets.wheel]
include = [
    "src/fmv_cli.py",
    "src/fmv_math.py",
    "src/fmv_runner.py",
]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# BUI-185: bare/blind-except rules only.
select = ["E722", "BLE001", "B904"]
