[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comic-fmv"
# BUI-305: bump this on any meaningful change to src/ so `uv tool list`
# alone signals staleness (a stale `uv tool install` was previously
# indistinguishable from a current one — see `comic-fmv --version` below
# for the finer-grained git-SHA signal).
version = "0.2.0"
description = "Compute fair market value for comics from eBay sold comps"
requires-python = ">=3.11"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
comic-fmv = "fmv_cli:main"

[tool.hatch.build.targets.wheel]
include = [
    "src/fmv_cli.py",
    "src/fmv_math.py",
    "src/fmv_runner.py",
]
sources = ["src"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
# BUI-185: bare/blind-except rules only.
select = ["E722", "BLE001", "B904"]
